# minopoly

./: .gitignore  CMakeLists.txt  README.md
Minopoly/: CMakeLists.txt
Minopoly/Assets/: logo_minopoly.icns
Minopoly/src/: assets.qrc  endgamedialog.cpp  endgamedialog.h  endgamedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  menudialog.cpp  menudialog.h  menudialog.ui
game-state/: CMakeLists.txt
game-state/assets/: bots.json  cards.json  monopoly.json  monopolyTestLoadPlayers.json  partie1.json  partie2.json  partie3.json  partie4.json
game-state/include/: Board.cpp  Board.h  Card.cpp  Card.h  Chance.cpp  Chance.h  Event.cpp  Event.h  Game.cpp  Game.h  JsonSerializer.cpp  JsonSerializer.h  Player.cpp  Player.h  Property.cpp  Property.h  Street.cpp  Street.h  Tile.cpp  Tile.h
game-state/include/game-state/: GameState.h
game-state/src/: Game.h  GameState.cpp  JsonSerializer.cpp  JsonSerializer.h  Player.cpp  Property.cpp
